tests/failing/generic_lambda_generic_type_mismatch.rgo
exit: @/exit
str: @/str
printf: @/printf
receiver: <T>(T)
foo: <T>(x: T, ok:receiver<T>){
    ok(x)
}
bar: (x: str){
    printf("%s", x, exit(0))
}
foo(42, bar)
